// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`bucket ladder scenarios — sample portfolio > scenario: baseline — output snapshot 1`] = `
{
  "depletionAge": null,
  "totalAssetsAt85": 321860,
  "totalAssetsAtHorizonEnd": 232377,
  "totalRebalances": 0,
  "totalTaxPaid": 47261,
}
`;

exports[`bucket ladder scenarios — sample portfolio > scenario: extended-cash-buffer — output snapshot 1`] = `
{
  "depletionAge": null,
  "totalAssetsAt85": 407117,
  "totalAssetsAtHorizonEnd": 363773,
  "totalRebalances": 85,
  "totalTaxPaid": 44718,
}
`;

exports[`bucket ladder scenarios — sample portfolio > scenario: ladder-annual — output snapshot 1`] = `
{
  "depletionAge": null,
  "totalAssetsAt85": 407117,
  "totalAssetsAtHorizonEnd": 363773,
  "totalRebalances": 79,
  "totalTaxPaid": 44718,
}
`;

exports[`bucket ladder scenarios — sample portfolio > scenario: ladder-default — output snapshot 1`] = `
{
  "depletionAge": null,
  "totalAssetsAt85": 407117,
  "totalAssetsAtHorizonEnd": 363773,
  "totalRebalances": 79,
  "totalTaxPaid": 44718,
}
`;

exports[`bucket ladder scenarios — sample portfolio > scenario: ladder-no-rebalance — output snapshot 1`] = `
{
  "depletionAge": null,
  "totalAssetsAt85": 407117,
  "totalAssetsAtHorizonEnd": 363773,
  "totalRebalances": 0,
  "totalTaxPaid": 44718,
}
`;

exports[`bucket ladder scenarios — sample portfolio > scenario: ladder-threshold — output snapshot 1`] = `
{
  "depletionAge": null,
  "totalAssetsAt85": 407117,
  "totalAssetsAtHorizonEnd": 363773,
  "totalRebalances": 74,
  "totalTaxPaid": 44718,
}
`;

exports[`bucket ladder scenarios — sample portfolio > scenario: sorr-shock-year2 — output snapshot 1`] = `
{
  "depletionAge": 86,
  "totalAssetsAt85": 22043,
  "totalAssetsAtHorizonEnd": 0,
  "totalRebalances": 64,
  "totalTaxPaid": 48065,
}
`;

exports[`bucket ladder scenarios — sample portfolio > scenario: sorr-shock-year2-baseline — output snapshot 1`] = `
{
  "depletionAge": 78,
  "totalAssetsAt85": 0,
  "totalAssetsAtHorizonEnd": 0,
  "totalRebalances": 0,
  "totalTaxPaid": 32417,
}
`;

exports[`bucket ladder scenarios — sample portfolio > scenario: sorr-shock-year5 — output snapshot 1`] = `
{
  "depletionAge": 89,
  "totalAssetsAt85": 82805,
  "totalAssetsAtHorizonEnd": 0,
  "totalRebalances": 73,
  "totalTaxPaid": 51073,
}
`;
